--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>First learning of Coursera</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+  <body>
+<section>This is my first section in this course.</section>
+<section>This happenes to be the second one and it is a little bit longer than the first one.</section>
+<section>Then last but not least the third section. I think there will be many sections in the future!!</section>
+    
+  </body>
+  
+  
+</html
 
