--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 <section>This is my first section in this course.</section>
-<section>This happenes to be the second one and it is a little bit longer than the first one.</section>
+<section>This happens to be the second one and it is a little bit longer than the first one.</section>
 <section>Then last but not least the third section. I think there will be many sections in the future!!</section>
     
   </body>
