--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -6,13 +6,20 @@
     <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body>
-<section>This is my first section in this course.</section>
-<section>This happens to be the second one and it is a little bit longer than the first one.</section>
-<section>Then last but not least the third section. I think there will be many sections in the future!!</section>
-    
-  </body>
-  
-  
-</html>
+	<body>
+	<h1>Our Menu</h1>
 
+		<section class="menu col_lg_3 col_md_6 col_sm_12">
+			<div class="titlesec">Chicken</div>
+		This is my first section in this course.
+			</section>
+		<section class="menu col_lg_3 col_md_6 col_sm_12">
+			<div class="titlesec">Carrot</div>
+		This happens to be the second one and it is a little bit longer than the first one.
+		</section>
+		<section class="menu col_lg_3 col_md_12 col_sm_12">
+			<div class="titlesec">Sushi</div>
+		Then last but not least the third section. I think there will be many sections in the future!!
+		</section>
+	</body>
+</html>
