--- a/angularJS/mod1_solution/index.html
+++ b/angularJS/mod1_solution/index.html
@@ -28,7 +28,7 @@
              <input id="lunch-menu" type="text"
              placeholder="list comma separated dishes you usually have for lunch"
              class="form-control" ng-model="getItems">
-             {{getItems}}
+            <!-- {{getItems}} -->
          </div>
          <div class="form-group">
              <button class="btn btn-default" ng-click="checkItems()">Check If Too Much</button>
